--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,21 @@
 .navbar {
     overflow: hidden;
     background-color: white;
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    align-items: center;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
+    justify-items: center;
+}
+
+.navbar_main {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .2);
 }
 
-.navbar_logo {
+.navbar__logo {
     background-image: url("../images/placeholderlogo.png");
     height: 50px;
     width: 130px;
@@ -25,7 +32,6 @@
     color: black;
     text-align: center;
     padding: 14px 16px;
-    margin-left: 20px;
     text-decoration: none;
 }
 
@@ -50,7 +56,7 @@
 /* Add a red background color to navigation links on hover */
 .navbar a:hover,
 .subnav:hover .subnavbtn {
-    background-color: black;
+    background-color: darksalmon;
     color: white;
 }
 
@@ -61,8 +67,6 @@
     left: 0;
     background-color: black;
     color: white;
-    width: 50%;
-    margin-left: 25%;
     z-index: 1;
 }
 
@@ -76,14 +80,35 @@
 /* Add a grey background color on hover */
 .subnav-content a:hover {
     background-color: darksalmon;
-    color: black;
+    color: white;
 }
 
 /* When you move the mouse over the subnav container, open the subnav content */
 .subnav:hover .subnav-content {
-    display: block;
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
+.navbar__login {
+    border: 0.5px solid darksalmon;
+    height: 30px;
+    width: 100px;
+    margin-left: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.navbar__login:hover {
+    background-color: darksalmon;
+
+    p {
+        color: white;
+    }
+}
 
 .hero {
     display: flex;
@@ -116,6 +141,10 @@
     .hero__text {
         height: 100px;
     }
+}
+
+.hero__text:hover{
+    text-decoration: underline darksalmon;
 }
 
 a {
@@ -183,6 +212,10 @@ p {
                     margin: 0px;
                 }
             }
+
+            .article__copy:hover{
+                text-decoration: underline darksalmon;
+            }
         }
 
     }
@@ -201,7 +234,7 @@ p {
         display: flex;
         align-items: center;
         background-color: rgba(56, 222, 228, 0.452);
-        border-radius: 25px 25px 0px 0px;
+        border-radius: 10px 10px 0px 0px;
     }
 
     .sidebar {
@@ -230,6 +263,10 @@ p {
                     margin: 0px;
                 }
             }
+
+            .sidebar__copy:hover{
+                text-decoration: underline darksalmon;
+            }
         }
     }
 }
@@ -250,9 +287,11 @@ p {
     }
 
     input[type=email] {
-        height: 40px;
+        height: 50px;
         width: 350px;
         padding-left: 2%;
+        border: 0.5px solid grey;
+        border-radius: 5px;
     }
 
     input[type=email]::placeholder {
@@ -261,13 +300,16 @@ p {
 
     input[type=email]:focus {
         border: 3px solid darksalmon;
+        outline: none;
     }
 
     input[type=submit] {
-        height: 40px;
-        width: 200px;
+        height: 50px;
+        width: 150px;
         margin-left: 20px;
         font-weight: bold;
+        border: 0.5px solid grey;
+        border-radius: 5px;
     }
 
     input[type=submit]:hover {
@@ -276,7 +318,7 @@ p {
     }
 }
 
-.footer_wrapper {
+.footer__wrapper {
     background-color: #e3e3e3;
 }
 
@@ -330,14 +372,14 @@ hr {
     }
 }
 
-.subfooter{
+.subfooter {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.payment-options{
+.payment-options {
     display: flex;
     flex-direction: row;
     margin: 20px 20px 0px 20px;
@@ -346,6 +388,7 @@ hr {
 
 .grid-item:hover {
     text-decoration: underline;
+    color: darksalmon;
 }
 
 .dropbtn {
@@ -356,43 +399,44 @@ hr {
     border: 1px solid darksalmon;
     border-radius: 5px;
     cursor: pointer;
-  }
-  
-  .currency-selector {
+}
+
+.currency-selector {
     position: relative;
     display: inline-block;
     margin-left: 10px;
-  }
-  
-  .currency_dropdown-content {
+}
+
+.currency_dropdown-content {
     display: none;
     position: absolute;
     right: 0;
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     min-width: 160px;
     z-index: 1;
-    bottom: 80%;  
-  }
-  
-  .currency_dropdown-content a {
+    bottom: 100%;
+}
+
+.currency_dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  .currency_dropdown-content a:hover {background-color: darksalmon;}
-  
-  .currency-selector:hover .currency_dropdown-content {
-    display: block;
-  }
-  
-  .currency-selector:hover .dropbtn {
-    background-color: darksalmon;
-    border: none;
-  }
+}
 
-  .copyright{
+.currency_dropdown-content a:hover {
+    background-color: darksalmon;
+}
+
+.currency-selector:hover .currency_dropdown-content {
+    display: block;
+}
+
+.currency-selector:hover .dropbtn {
+    background-color: darksalmon;
+}
+
+.copyright {
     margin: 20px 20px 0px 20px;
-  }
+}
